# Xie

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  README_CN.md  package-lock.json  package.json  pyproject.toml  test.html  test.md  test_wechat.html  upload_pypi.sh
data/: test_cases.json
md2wx/: LICENSE  README_CN.md  __init__.py  __main__.py  requirements.txt  upload_pypi.bat
md2wx/md2wx/: api.py  app.py  cli.py  core.py  gui.py
md2wx/templates/: index.html
tests/: conftest.py  test_core.py
xie/: __init__.py  __main__.py  api.py  app.py  cli.py  core.py  gui.py
xie/templates/: index.html
